add Dockerfile and README for batch ETL